--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@ Google Maps Mashup Starter Code:
 	var map;
 	var parks = [
 		{"park":"Yellowstone","coords":[44.4280,-110.5885]},
-		{"park":"Glacier","coords":[48.7596, -113.7870]}
+		{"shop":"LCBO","coords":[43.713498, -79.723601]},
+        {"Restaurent":"MADRAS","coords":[43.752045, -79.737480]},
+        {"coffee shop":"starbucks","coords":[43.677869, -79.624629]}, 
+        {"Amusement park":"Wet and Wild","coords":[43.740489, -79.642846]}, 
+        {"Coffee shop":"Tim Hortons","coords":[43.731927, -79.679825]},
+        {"Clothing":"Hudson Bay","coords":[43.734314, -79.706136]},
+        {"shopping center":"Sector 17","coords":[30.735066, 76.781383]},
+
+
 		];
 
 	function initMap() {
