--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ Google Maps Mashup Starter Code:
         {"coffee shop":"starbucks","coords":[43.677869, -79.624629]}, 
         {"Amusement park":"Wet and Wild","coords":[43.740489, -79.642846]}, 
         {"Coffee shop":"Tim Hortons","coords":[43.731927, -79.679825]},
-        {"Clothing":"Hudson Bay","coords":[43.734314, -79.706136]},
-        {"shopping center":"Sector 17","coords":[30.735066, 76.78138]},
+        {"Alberta":"Banff","coords":[51.178169, -115.570707]},
+        {"shopping center":"Sector 17","coords":[30.735066, 76.781383]}
+        ,
 
 
 
